feat(browser): 配置Playwright中国镜像支持和升级项目依赖
- 自动配置Playwright浏览器下载的中国镜像(npmmirror.com)
- 添加ensureMirrorConfigured方法实现JVM重启以应用镜像环境变量
- 在.gitignore中添加.cache/目录排除规则
- 升级Java版本从11到17并更新相关编译配置
- 将javax.annotation.Nullable替换为jakarta.annotation.Nullable
- 使用getIfNull替代defaultIfNull并优化空值处理逻辑
- 更新Selenium WebDriver到4.33.0和Apache Commons Lang3到3.20.0
- 升级JUnit Jupiter到5.12.2和Mockito到5.18.0
- 添加install-browsers-cn Maven profile用于中国镜像安装
- 移除废弃的describe方法和相关测试代码
- 修复LICENSE文件中的合并冲突标记